u arab pen title

--- a/html/lesson_plans/palestine_arabian_penninsula.html
+++ b/html/lesson_plans/palestine_arabian_penninsula.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>The Romanticization of the Bedouin Arab and the Colonial Construction of the Arabian Peninsula | Undisciplining the Victorian Classroom</title><!-- change title of pages to use underscores and to be consistent; reach out to authors and ask to shorten title in accordance with UVC style guide-->
+    <title>The Romanticization of the Bedouin Arab and Arabian Peninsula | Undisciplining the Victorian Classroom</title><!-- change title of pages to use underscores and to be consistent; reach out to authors and ask to shorten title in accordance with UVC style guide-->
 		<meta name="description" content="Discusses the link between British colonial representations of the Arabian Peninsula, Arabs, and Arabia in the Romantic and Victorian periods."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 id="lesson-plan">The Romanticization of the Bedouin Arab and the Colonial Construction of the Arabian Peninsula</h2>
+				<h2 id="lesson-plan">The Romanticization of the Bedouin Arab and Arabian Peninsula</h2>
 					<div class="aspect-ratio-box">
           	<img src="/img/lesson_plans/uvc_0074-1800px.jpg" srcset="/img/lesson_plans/uvc_0074-1800px.jpg 1800w, /img/lesson_plans/uvc_0074-1650px.jpg 1650w, /img/lesson_plans/uvc_0074-1500px.jpg 1500w, /img/lesson_plans/uvc_0074-1350px.jpg 1350w, /img/lesson_plans/uvc_0074-1200px.jpg 1200w, /img/lesson_plans/uvc_0074-1050px.jpg 1050w, /img/lesson_plans/uvc_0074-900px.jpg 900w, /img/lesson_plans/uvc_0074-750px.jpg 750w, /img/lesson_plans/uvc_0074-600px.jpg 600w, /img/lesson_plans/uvc_0074-450px.jpg 450w, /img/lesson_plans/uvc_0074-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="a sepia-toned photograph depicting twelve men, most of whom wear head coverings of different sorts, posed with a child, dog, and other supplies outside"/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
