u pal code add subsecitons

--- a/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Teaching Romanticism and Victorianism in Palestine | Undisciplining the Victorian Classroom</title><!-- Change -->
+    <title>Teaching Romanticism and Victorianism in Palestine | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Explores the contemporary conditions in which teachers and students in Occupied Palestine engage with British Romantic and Victorian period texts."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -65,7 +65,14 @@
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
 						<li><a href="#overview">Overview</a></li>
-						<li><a href="#teaching">Romanticism and Victorianismn</a></li>
+						<li>
+							<a href="#teaching">Romanticism and Victorianismn</a>
+							<ol>
+								<li><a href="#outside-the-university">Thinking “Outside the University”</a></li>
+								<li><a href="#beyond-the-classroom">Beyond the Classroom and Nation</a></li>
+								<li><a href="#survival-and-knowledge">Survival and Knowledge</a></li>
+						</ol>
+					</li>
 						<li><a href="#questions">Discussion Questions</a></li>
 						<li><a href="#workscited">Works Cited</a></li>
 						<li><a href="#recommended">Recommended Reading</a></li>
@@ -115,6 +122,9 @@
 
 					<blockquote><p>At the start of the semester, I always have a general discussion. A lot of the students that we have don't like literature, they don't see the point in it. And I think rather than being offended by that, as some might, I always like to ask them, “why?” Because I don't want to sort of stand up there and proselytize and sermonize on how great literature is, and I get the whole thing. How is it relevant? Those students who are from the bloody refugee camp? You know, I mean, it's insulting just to say to them, you should. And so always at the start of every literature course, I say that if they think that that is pointless, why is that and how does it compare to other disciplines? (B, Personal conversation)</p></blockquote>
 
+					<p><section aria-labelledby="outside-the-university">
+						<h4 id="outside-the-university">Thinking “Outside the University”</h4></p>
+
 					<p>In a way, the challenge of revealing the relevance of literature that is historically and culturally removed from students is familiar to all instructors. Yet B mentions that some of her “students are from the bloody refugee camp,” and we are reminded of the specificity of her context. It is “insulting” to insist on the value of the literature she is supposed to teach them. What may seem vaguely obvious is brought into sharp focus here–that is, when one is teaching in a colonized land, what is of interest to students takes on a force that must transform the classroom:</p>
 
 					<blockquote><p>I want to know what the students are interested in. So, one of the things that I do at the start of the course is I ask students about all the things that interest them outside of university and also academic disciplines that interest them. So, for example, you know, a lot of students will say things like they are interested in medicine or they're interested in crime and criminology. And so based on what they say I can prioritize certain literary works.</p>
@@ -146,6 +156,10 @@
 					<blockquote><p>Students are non native speakers of English. Some people think we should not teach literature to students. The only work that should be taught is skills and students should only be able to speak and to be able to write some decent writing. But that is not good enough, because they should be exposed literary texts and to be able to understand that and to be able to reflect on, you know, to be able to be critical and evaluative and to try to connect with the text and see if this is this, and the relevance in one way or another between a personal experience a student has had with the texts and songs. (C, Personal conversation)</p></blockquote>
 
 					<p>B's and C's approaches are not a decontextualized teaching, but a radically immanent contextualization of literature inherited from colonialism. This philosophy of teaching was referred back more than once to the Palestinian teacher, scholar, and poet Khalil Sakakhini for whom “all learning occurs in context,” and rather than “giving rules for teaching Arabic grammar, present[ed] examples and ask[ed] the students to extract the methods and principles and apply them to other new problems” (Alshwaikh 67). The contamination of interests to which they speak is an apt place to begin planning for anticolonial collaboration with Palestinian teachers because it challenges us to ask what we have taken as the given distinction between the relevant contexts for teaching British literature. B and C's pedagogy provokes a thinking about the general interest of an anticolonial pedagogy that must get beyond national borders and their reinforcement through strict periodization, both of which militate against the interests that we might share with our Palestinian colleagues who are teaching the same texts as we do.</p>
+					</section>
+
+					<p><section aria-labelledby="beyond-the-classroom">
+						<h4 id="beyond-the-classroom">Beyond the Classroom and Nation</h4></p>
 
 					<p>A question worth continuing to ask is why the refrain of general interests appear in classrooms that themselves cannot be separated from colonial conditions and how the cultivation of such interests through communication is, or is not, bound up with struggles against colonial ways of knowing in our classrooms. Such questions will have to be asked directly in conversation with teachers in Palestine and through conversations cultivated through “the point” of Palestinian liberation from the occupation in all of its forms.</p>
 
@@ -162,6 +176,11 @@
 					<p>A described the same need for such writers in the context of combatting the patriarchal nature of Palestinian society under the conditions of, and in reaction to, the present occupation. This is where she described the relevance of Victorian literature to students' lives:</p>
 
 					<blockquote><p>They connect to Victorian literature, particularly when we talk about women and their position. That's interesting. We talked about how the society was patriarchal and there were voices that reject this patriarchy, and they can connect to that. We have this suffering. The voices of women are silenced. So, when we talk about feminism, when we talk about gender issues, they feel that, yeah, they listen. Yeah, it makes sense. Because this is their suffering. And most of my students are female students actually. Like if I have a section of 35 students, 30 are female students and only five, or sometimes less, are male. (A, Personal conversation)</p></blockquote>
+				</section>
+
+				<p><section aria-labelledby="survival-and-knowledge">
+					<h4 id="survival-and-knowledge">Survival and Knowledge</h4></p>
+				
 
 					<p>Whereas A told me that it was far more difficult to get students to connect to Romantic literature (especially poetry, because of its emphasis on nature and solitude), C proposed a direct and significant relationship between Romanticism, of both British and American varieties and Palestinian literature. According to what he called his own “self-analysis” of poetry, Romanticism was a huge movement in Arabic poetry more generally:</p>
 
@@ -188,6 +207,7 @@
 					<p>We think we are civilized and we live in a civilized world that actually apologizes for colonialism. So now it's like a new page. But, actually, it's not because we still have these ideas of superiority. Yes. Because we still have wars and occupation.(A, Personal conversation)</p></blockquote>
 
 					<p>At the time of editing these conversations and writing this essay, one of the universities that I visited has been closed at least twice due to invasions by the Israeli Defense Forces, and at least one professor I spoke with was facing immediate physical danger from Zionist settler attacks when she was able to travel to campus and teach. In this context of constant invasion, the opening out to what sustains interest for students outside of the university works as a way to refuse the reproduction of the colonial separation between aesthetics and material life. Moreover, it opens up the question for us about the relationship between survival and knowledge as an everyday one, and how that question gets lost when we are too committed to teaching context in such a way that it remains locked in the past.</p>
+					</section>
 
 				</section>
 
