u pal lit subsections

--- a/html/lesson_plans/palestine_literature_and_anti-colonial_identity.html
+++ b/html/lesson_plans/palestine_literature_and_anti-colonial_identity.html
@@ -64,7 +64,13 @@
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#overview">Palestinian Literature and Anti-Colonial Identity</a></li>
+						<li>
+							<a href="#overview">Palestinian Literature and Anti-Colonial Identity</a>
+							<ol>
+								<li><a href="#palestinian-and-british-lit">Reconciling Palestinian and British Literature</a></li>
+								<li><a href="#palestinian-methodsd-and-archives">Towards Palestinian Methods and Archives</a></li>
+						</ol>
+						</li>
 						<li><a href="#questions">Discussion Questions</a></li>
 						<li><a href="#workscited">Works Cited</a></li>
 						<li><a href="#recommended">Recommended Reading</a></li>
@@ -92,6 +98,9 @@
 					<p>There is no question, then, that Palestinians lived, worked, had families, cultivated land, sang songs, and had indigenous ways of living that had been developed over centuries before the nationalist movement launched in the early twentieth century. The outstanding question is how we might do anti-colonial work with Palestinian teachers and academics in the present, against the ongoing settler colonialism there that has drawn much of its nationalist ideology and racializing tactics from the periods that we study.</p>
 
 					<p>The main question I wanted to ask teachers and academics when I first made plans to visit Palestine had to do with the Palestinian culture and poetry that coincided with the primarily British culture and literature that the readers of <em>Undisciplining the Victorian Classroom</em> teach and study. How might one negotiate the indigenous life of Palestinians absent the framework of nationalism that would begin to emerge in the early twentieth century, in the face of British colonialism and the Zionist movement? This is the question that I left with more questions about than answers to, and a deeper sense than I had arrived with, about the anti-colonial work that remains to be done on the incredible repression of pre-twentieth century Palestinian life.</p>
+
+					<p><section aria-labelledby="palestinian-and-british-lit">
+						<h4 id="palestinian-and-british-lit">Reconciling Palestinian and British Literature</h4></p>
 
 					<p>My queries about the literature of historical Palestine and British colonialism sparked the most curious and kinetic discussions with people there. The primary difficulty facing us in such a project is a deeply European and nineteenth-century one – that is, the obfuscation of histories and peoples whose lives and ideologies were organized around fundamentally different coordinates, practices, and ideologies than those of the European nation-state, including its imposition of borders, private property, and ethnocentrism. The teachers and scholars that I conversed with had mixed responses to such a comparative project.</p>
 
@@ -130,7 +139,11 @@
 					<p>D discussed the resources at universities outside of Palestine from which they are constantly cut off, only further enclosing a contemporary patriarchy and orthodoxy, or what he called a “leader's mentality” (D, Personal conversation). As he said, “[being] educated does not mean changing. You have to be cultural, not educated. Most of the people here are educated and have a degree. But on the ground [there are] no changes” (D, Personal conversation).</p>
 
 					<p>D's perspective speaks to the anti-colonial work that stands to be done in bridging historical and present-day Palestine, particularly through the recovery of actual Palestinian history that would attest, as previous ethnographic work has, to the dynamism and struggles around matters of religious orthodoxy and gender in Palestinian villages prior to 1948.</p>
+					</section>
 
+					<p><section aria-labelledby="palestinian-methods-and-archives">
+						<h4 id="palestinian-methods-and-archives">Towards Palestinian Methods and Archives</h4></p>
+					
 					<p>The status of Palestine and the lives of Palestinians in the eighteenth and nineteenth century has real anti-colonial potential given the differences that emerge between the borderless but rooted communities of predominantly (but not exclusively) Muslim Arabs in Palestine then, and the later literatures that bear witness to occupation and preserve the more recent history of mass dispossession and murder.</p>
 
 					<p>As mentioned previously, the historical territory of Palestine was not a designator of a unified or homogeneous ethnicity. This introduces a complexity that we tend to disengage with in British literature, which is the dynamic of indigeneity as understood outside of a romanticized sensibility. This is an inescapable complexity when it comes to approaching Palestinian culture prior to 1948, and it has necessarily anti-colonial implications that stand to undo many of our presuppositions about space, identity, and culture.</p>
@@ -172,6 +185,7 @@
 					<p>Engaging with Palestinian culture and literature must be a historically-informed pursuit, sensitive to the difficulty of reconstructing ways of living in Palestine due to the colonial construction of the category of literature as well as the colonial and settler colonial projects of disqualifying Arabic existence in Palestine. As Sarah Copsey Alsader has argued, those projects began as early as 1917 precisely because the cultural and religious heterogeneity that existed in major Palestinian cities was unrecognizable as a form of life to colonial desires. This point remains necessary to maintain, as Ra'ad has suggested, in order to question “the bias that sees national 'consciousness' as somehow a positive thing” (8). For him, such a perspective is a Zionist importation of “a European nationalist ideology . . . adapted it to the colonization of Palestine” that “entails aggression towards others and has to prove itself through constant reinvention of structures of exclusiveness” (8).</p>
 
 					<p>In contrast, the long history of co-existence in historical Palestine offers a different, anti-colonial model of “a latent, less self conscious, more nuanced identity that is comfortable with itself [and] requires no such perpetual self-justification” (Ra'ad 8), providing a basis for notions of indigeneity and the right to return that does not require ethnic purity or national borders. After all, as Ra'ad also writes, it does not disqualify the fact that “people in villages and towns mostly stayed in place over the millennia, particularly in the small villages in Palestine and greater Syria” to also say that “when there were no borders, nothing prevented someone living in what is now Jordan from moving to live in Palestine” (7).</p>
+					</section>
 
 				</section>
 
