--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -109,7 +109,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Mayer, Luigi. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Views_in_Palestine_01.jpg">Views in Palestine</a></em>. Drawing, 2 Jan. 1804,. R. Boyer Historic Gallery, Pall Mall, London.</p>
+					<p>Mayer, Luigi. <em><a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Views_in_Palestine_01.jpg">Views in Palestine</a></em>. Drawing, 2 Jan. 1804. R. Boyer Historic Gallery, Pall Mall, London. Public domain.</p>
 				</section>
 
 				<section class="small" aria-labelledby="citation">
