fix %20s in pal LPs

--- a/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
@@ -86,7 +86,7 @@
 					<h3 id="overview">Overview</h3>
 						<p>This resource in this lesson plan cluster aims to familiarize teachers and students with the contemporary conditions in which teachers and students in Palestine learn.</p>
 
-						<p>The resource synthesizes multiple conversations that I conducted with teachers and academics in Ramallah, Jenin, Hebron, and East Jerusalem in the summer of 2022. The Palestinian Authority technically controls Ramallah and Jenin, but these cities are surrounded by areas that are under Israeli control and illegal settlements. The Palestinian Authority is also supposed to control <a aria-label="External Link" href="https://www.hebronapartheid.org/index.php?page=introduction#:~:text=In%201994%2C%20immediately%20after%20the,the%20proximity%20of%20the%20settlements.">Hebron</a>, but extremist settlers and a large population of Israeli Defense Soldiers have illegally occupied the city since 1994.</p>
+						<p>The resource synthesizes multiple conversations that I conducted with teachers and academics in Ramallah, Jenin, Hebron, and East Jerusalem in the summer of 2022. The Palestinian Authority technically controls Ramallah and Jenin, but these cities are surrounded by areas that are under Israeli control and illegal settlements. The Palestinian Authority is also supposed to control <a aria-label="External Link" href="https://www.hebronapartheid.org/index.php?page=introduction#:~:text=In1994%2Cimmediatelyafterthe,theproximityofthesettlements.">Hebron</a>, but extremist settlers and a large population of Israeli Defense Soldiers have illegally occupied the city since 1994.</p>
 							
 						<p>East Jerusalem is a part of Palestine that has been illegally occupied by Israel since 1968. Since Palestinian instructors in English language departments teach survey courses and other courses in which canonical texts of the Romantic and Victorian periods are an important part of their students' education, this lesson plan cluster would not be complete without engaging this contemporary context. What is it like to teach texts that are often understood to be part of an Orientalizing project under the current settler colonial occupation of Palestine by Israel?</p>
 
@@ -225,7 +225,7 @@
 					<section aria-labelledby="workscited">
 					<h3 id="workscited">Works Cited</h3>
 
-					<p>“<a aria-label="External Link" href="https://www.hebronapartheid.org/index.php?page=introduction#:~:text=In%201994%2C%20immediately%20after%20the,the%20proximity%20of%20the%20settlements">Introduction: Occupied Hebron/Al-Khalil</a>.” <em>Mapping the Apartheid</em>. February, 2016.</p>
+					<p>“<a aria-label="External Link" href="https://www.hebronapartheid.org/index.php?page=introduction#:~:text=In1994%2Cimmediatelyafterthe,theproximityofthesettlements">Introduction: Occupied Hebron/Al-Khalil</a>.” <em>Mapping the Apartheid</em>. February, 2016.</p>
 
 					<p>A. <em>Personal Conversation</em>. July 2022.</p>
 
