--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -51,9 +51,9 @@
 					<div class="specs-container">
 							<p><strong>Developers:</strong> Mohammad Sakhnini <a class="mail" href="mailto:mosakhnini@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Sarah Copsey Alsader <a class="mail" href="mailto:sarahlcopsey@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>, Lenora Hanson <a class="mail" href="mailto:lh117@nyu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 							
-							<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.edu?subject=question%20about%20Undisciplining%20the%20Victorian%20Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+							<p><strong>Lesson Plan Cluster Developer:</strong> Ryan D. Fong <a class="mail" href="mailto:ryan.fong@kzoo.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 	
-							<p><strong>Lesson Plan Guide:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question%20about%20Undisciplining%20the%20Victorian%20Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+							<p><strong>Lesson Plan Guide:</strong> Cherrie Kwok <a class="mail" href="mailto:mk7kf@virginia.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 							
 							<p><strong>Webpage Developer:</strong> Ava K. Bindas</p>
 	
