u image cap arab pen LP

--- a/html/lesson_plans/palestine_arabian_penninsula.html
+++ b/html/lesson_plans/palestine_arabian_penninsula.html
@@ -326,7 +326,7 @@
 
 					
 
-					<p>Sykes, Mark. “<a aria-label="External Link" href="https://archive.org/details/darulislamrecord00sykeuoft/page/n7/mode/2up">Frontspiece Image</a>.” <em>Dar-Ul-Islam</em>, Bickers and Son, 1904. Robarts Library. Public domain.</p>
+					<p>Sykes, Mark. “<a aria-label="External Link" href="https://archive.org/details/darulislamrecord00sykeuoft/page/n7/mode/2up">[Title Unknown]</a>.” <em>Dar-Ul-Islam</em>, Bickers and Son, 1904, Frontspiece imagge. Robarts Library. Public domain.</p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
