--- a/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Teaching Romanticism and Victorianism in Palestine | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Explores the contemporary conditions in which teachers and students in Occupied Palestine engage with British Romantic and Victorian period texts."/><!-- Change -->
+		<meta name="description" content="Explores the contemporary conditions in which teachers and students in Occupied Palestine engage with British Romantic and Victorian period texts."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Teaching Romanticism and Victorianism in Palestine</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="An illsutrated map of the four cities of the Holy Land, showing clusters of dwellings and buildings with colorful roofs. Rivers divide the clusters."/>
+          	<img src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A map of the cities of the Holy Land, showing clusters of dwellings and buildings with colorful roofs"/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
