u pal LP adrian edits

--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -246,7 +246,7 @@
 	<section aria-labelledby="materials-2">
 	<h4 id="materials-2">Primary Visual Materials: Orientalism and Romanticism</h4>
 
-	<p>This plan recommends analyzing the following images alongside famous paintings of the nineteenth century such as those by John Constable (for example, see <em>Weymouth Bay</em> (1824), a painting of a landscape) and Edgar Degas (for example, see <em>Women Ironing</em> (1875), a painting representing urban and working classes). Among the many paintings and etchings which represented Palestinian landscapes and people, two of the primary sources that were listed above are also particularly relevant for this section of the lesson plan: Richardson's <em>Travels Along the Mediterranean</em> and Ashworth's <em>Walks in Canaan</em>.</p>
+	<p>This plan recommends analyzing the following images alongside famous paintings of the nineteenth century such as those by John Constable (for example, see <em>Weymouth Bay</em> [1824], a painting of a landscape) and Edgar Degas (for example, see <em>Women Ironing</em> [1875], a painting representing urban and working classes). Among the many paintings and etchings which represented Palestinian landscapes and people, two of the primary sources that were listed above are also particularly relevant for this section of the lesson plan: Richardson's <em>Travels Along the Mediterranean</em> and Ashworth's <em>Walks in Canaan</em>.</p>
 	</section>
 
 		<section aria-labelledby="visual-1">
