--- a/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
+++ b/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html
@@ -114,7 +114,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>Ryan D. Fong, Cherrie Kwok, Sarah Copsey Alsader, Lenora Hanson, Samiha Khalil, Gabriel Polley, Mohammad Sakhini. “Palestine in the Eighteenth and Nineteenth Centuries: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html</a>.</p>
+					<p>Sarah Copsey Alsader, Lenora Hanson, Samiha Khalil, Gabriel Polley, Mohammad Sakhini, devs. Ryan D. Fong , les. plan clust. dev.;  Cherrie Kwok , les. plan guide. “Palestine in the Eighteenth and Nineteenth Centuries: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/palestine_in_the_eighteenth_and_nineteenth_centuries_intro.html</a>.</p>
 				</section>
 			</main>
 			
