--- a/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
+++ b/html/lesson_plans/palestine_teaching_romanticism_and_victorianism.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 				<h2 id="lesson-plan">Teaching Romanticism and Victorianism in Palestine</h2>
 					<div class="aspect-ratio-box">
-          	<img src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A map of the cities of the Holy Land, showing clusters of dwellings and buildings with colorful roofs"/>
+          	<img class="image-border" src="/img/lesson_plans/uvc_0075-1800px.jpg" srcset="/img/lesson_plans/uvc_0075-1800px.jpg 1800w, /img/lesson_plans/uvc_0075-1650px.jpg 1650w, /img/lesson_plans/uvc_0075-1500px.jpg 1500w, /img/lesson_plans/uvc_0075-1350px.jpg 1350w, /img/lesson_plans/uvc_0075-1200px.jpg 1200w, /img/lesson_plans/uvc_0075-1050px.jpg 1050w, /img/lesson_plans/uvc_0075-900px.jpg 900w, /img/lesson_plans/uvc_0075-750px.jpg 750w, /img/lesson_plans/uvc_0075-600px.jpg 600w, /img/lesson_plans/uvc_0075-450px.jpg 450w, /img/lesson_plans/uvc_0075-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A map of the cities of the Holy Land, showing clusters of dwellings and buildings with colorful roofs"/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
@@ -69,7 +69,7 @@
 							<a href="#teaching">Romanticism and Victorianismn</a>
 							<ol>
 								<li><a href="#outside-the-university">Thinking “Outside the University”</a></li>
-								<li><a href="#beyond-the-classroom">Beyond the Classroom and Nation</a></li>
+								<li><a href="#beyond-the-classroom">Beyond the Classroom and the Nation</a></li>
 								<li><a href="#survival-and-knowledge">Survival and Knowledge</a></li>
 						</ol>
 					</li>
@@ -121,7 +121,6 @@
 					<p>As many instructors noted, very few students <em>want</em> to take these courses. Understandably, they struggle with the significance of British literature to their own lives. Despite the colonial histories that shape British literature, all of the immediate pressures that Palestinian students are under today makes literature that is not connected to the literature of Palestinian resistance feel, as one instructor put it, pointless. This disconnect puts an immense pressure on teachers to work against the inherently colonial mentality of canonicity as well as the hierarchy that positions teachers as sources of knowledge that are ultimately abstracted from the lived realities of Palestinian students. B told me that:</p>
 
 					<blockquote><p>At the start of the semester, I always have a general discussion. A lot of the students that we have don't like literature, they don't see the point in it. And I think rather than being offended by that, as some might, I always like to ask them, “why?” Because I don't want to sort of stand up there and proselytize and sermonize on how great literature is, and I get the whole thing. How is it relevant? Those students who are from the bloody refugee camp? You know, I mean, it's insulting just to say to them, you should. And so always at the start of every literature course, I say that if they think that that is pointless, why is that and how does it compare to other disciplines? (B, Personal conversation)</p></blockquote>
-					</section>
 
 					<section aria-labelledby="outside-the-university">
 						<h4 id="outside-the-university">Thinking “Outside the University”</h4>
@@ -160,7 +159,7 @@
 					</section>
 
 					<section aria-labelledby="beyond-the-classroom">
-						<h4 id="beyond-the-classroom">Beyond the Classroom and Nation</h4></p>
+						<h4 id="beyond-the-classroom">Beyond the Classroom and the Nation</h4></p>
 
 					<p>A question worth continuing to ask is why the refrain of general interests appear in classrooms that themselves cannot be separated from colonial conditions and how the cultivation of such interests through communication is, or is not, bound up with struggles against colonial ways of knowing in our classrooms. Such questions will have to be asked directly in conversation with teachers in Palestine and through conversations cultivated through “the point” of Palestinian liberation from the occupation in all of its forms.</p>
 
@@ -209,6 +208,7 @@
 
 					<p>At the time of editing these conversations and writing this essay, one of the universities that I visited has been closed at least twice due to invasions by the Israeli Defense Forces, and at least one professor I spoke with was facing immediate physical danger from Zionist settler attacks when she was able to travel to campus and teach. In this context of constant invasion, the opening out to what sustains interest for students outside of the university works as a way to refuse the reproduction of the colonial separation between aesthetics and material life. Moreover, it opens up the question for us about the relationship between survival and knowledge as an everyday one, and how that question gets lost when we are too committed to teaching context in such a way that it remains locked in the past.</p>
 					</section>
+				</section>
 
 					<section aria-labelledby="questions">
 					<h3 id="questions">Discussion Questions</h3>
