--- a/html/lesson_plans/palestine_and_travel.html
+++ b/html/lesson_plans/palestine_and_travel.html
@@ -67,9 +67,8 @@
 				<h3 id="menu">Menu</h3>
 				<ol class="menu">
 						<li><a href="#overview">Overview</a></li>
-							<li><a href="#structure">Central Learning Questions</a></li>
-						<li>
-								<a href="#materials">Suggested Materials and Discussion Questions</a>
+						<li><a href="#structure">Central Learning Questions</a></li>
+						<li><a href="#materials">Suggested Materials and Discussion Questions</a>
 								<ol>
 										<li><a href="#materials-1">Primary Text Materials</a></li>
 										<li><a href="#materials-2">Primary Visual Materials: Orientalism and Romanticism</a></li>
@@ -108,7 +107,6 @@
 	
 					<li>Given that the harsh conditions of traveling in the Holy Land required that Europeans interact with locals who facilitated their movement across the region, how does such an encounter help to consolidate or disrupt European negative images of Muslim, Christian, and Jewish inhabitants of the Holy Land?</li>
 			</ol>
-	</section>
 
 	<section aria-labelledby="materials">
     <h3 id="materials">Suggested Materials and Discussion Questions</h3>
@@ -119,22 +117,19 @@
 	</section>
 
 		<section aria-labelledby="materials-1">
-				<article aria-labelledby="materials-1">
-						<h4 id="materials-1">Primary Textual Materials</h4>
+			<h4 id="materials-1">Primary Textual Materials</h4>
+			<section>
+			<h5 id="textual-1">Clarke, Edward Daniel. Travels in Various Countries of Europe, Asia and Africa (Part the Second). London: T, Cadell and W. Davies, 1810.</h5>
 
-						<h5 id="textual-1">Clarke, Edward Daniel. Travels in Various Countries of Europe, Asia and Africa (Part the Second). London: T, Cadell and W. Davies, 1810.</h5>
+			<p>Clarke visited Palestine in the summer of 1801, less than two years after the British Navy (in cooperation with the Ottomans) drove Napoleon Bonaparte off the coast of Egypt and Palestine.</p>
 
-						<p>Clarke visited Palestine in the summer of 1801, less than two years after the British Navy (in cooperation with the Ottomans) drove Napoleon Bonaparte off the coast of Egypt and Palestine.</p>
+			<p>In his travel narrative about Palestinian cities, Clarke, who accompanied Captain Culverhouse on his mission to the Ottoman governor of Acre at the time, Ahmad Pasha Al-Jazzar, was mostly dismissive of what he saw as Christian superstitious traditions in the Holy Land. He critiqued the institution of the Catholic Church and considered any Christian (Oriental or European) who visits Palestine for purposes of performing the pilgrimage as “unable to discriminate between monkish mummery and simple truth” (432).</p>
 
-						<p>In his travel narrative about Palestinian cities, Clarke, who accompanied Captain Culverhouse on his mission to the Ottoman governor of Acre at the time, Ahmad Pasha Al-Jazzar, was mostly dismissive of what he saw as Christian superstitious traditions in the Holy Land. He critiqued the institution of the Catholic Church and considered any Christian (Oriental or European) who visits Palestine for purposes of performing the pilgrimage as “unable to discriminate between monkish mummery and simple truth” (432).</p>
+			<p>With the Bible in hand, Clarke found it impossible to believe what the local and Catholic traditions mention about the Holy Land, recalling that these traditions are nothing but superstitions and do not reflect what the Bible mentions about the topography and landscape of the region. To that end, his Palestinian journey was a way for Clarke, who was appointed professor of mineralogy at Cambridge after he returned to England in 1803, to critique Christian pietism represented in the worship of shrines and ruins instead of using reason to interpret the Bible.</p>
 
-						<p>With the Bible in hand, Clarke found it impossible to believe what the local and Catholic traditions mention about the Holy Land, recalling that these traditions are nothing but superstitions and do not reflect what the Bible mentions about the topography and landscape of the region. To that end, his Palestinian journey was a way for Clarke, who was appointed professor of mineralogy at Cambridge after he returned to England in 1803, to critique Christian pietism represented in the worship of shrines and ruins instead of using reason to interpret the Bible.</p>
+			<p>Clarke found in writing about his experience in Palestine an opportunity to reflect on how religious enthusiasm and worship of relics lead to sectarian and religious wars, such as those of the Crusaders (of whom he was a critic).</p>
 
-						<p>Clarke found in writing about his experience in Palestine an opportunity to reflect on how religious enthusiasm and worship of relics lead to sectarian and religious wars, such as those of the Crusaders (of whom he was a critic).</p>
-
-						<p>The students who read Clarke's book might discuss the extent to which travels in Palestine allowed Britons to contribute to the debate in Britain and Germany at the time about the extent to which the Bible is a historical document, rather than a religious book valid for all people and at all times. Students can read Clarke's chapters about Palestine while studying the rise of Biblical criticism as a discipline in which travel writings about the Holy Land constituted an important component.</p>
-				</article>
-		</section>
+			<p>The students who read Clarke's book might discuss the extent to which travels in Palestine allowed Britons to contribute to the debate in Britain and Germany at the time about the extent to which the Bible is a historical document, rather than a religious book valid for all people and at all times. Students can read Clarke's chapters about Palestine while studying the rise of Biblical criticism as a discipline in which travel writings about the Holy Land constituted an important component.</p>
 
 		<section aria-labelledby="discussion-questions-1">
 			<h6 id="discussion-questions-1">Possible Discussion Questions</h6>
@@ -145,6 +140,7 @@
 
 					<li>To what extent was Clarke's journey in the Holy Land meant to deconstruct the romance of the Crusades, which was gaining momentum in Britain in the late eighteenth and early nineteenth century with the publication in 1781 of Thomas Warton's <em>The History of English Poetry</em>, in 1794 of Thomas Percy's <em>Reliques of Ancient English Poetry</em>, and in 1805 of George Ellis's <em>Specimens of Early English Metrical Romances</em>?</li>
 			</ol>
+		</section>
 		</section>
 
 		<section aria-labelledby="textual-2">
@@ -157,6 +153,7 @@
 			<p>Buckingham did not call for possessing the land and reconstituting it anew; nor did he see it, as his countryman the Earl of Shaftesbury did, as an empty land needing the restoration of its original Jewish possessions.</p>
 
 			<p>Students could discuss how Buckingham's attitude towards Palestine was not only tied to Britain's rising commercial and imperial interests in the Middle East but also an illustration of rising political ideals during the period which critiqued British and European imperial and missionary activities in Palestine. Students can also read Buckingham's book in the context of an intersection in nineteenth-century Britain between liberal values and empire.</p>
+		</section>
 		</section>
 
 		<section aria-labelledby="discussion-questions-2">
@@ -302,6 +299,7 @@
 
         <p>Yoshikawa, Saeko. <em>William Wordsworth and the Invention of Tourism, 1820-1900</em>. Routledge, 2014.</p>
     </section>
+	</section>
 
 <section aria-labelledby="biography">
     <h3 id="biography">Developer Biographies</h3>
